fix: resolve concurrency, lifecycle, and edge case issues across modules
- region: handle empty flags map in Region3D constructor and enforce damager location check in PvP protection
- task: use unmodifiable list in TaskChain.allOf to allow null/Void chain results
- redis: add atomic setIfAbsentAsync for distributed cooldowns, deduplicate RPC timeout scheduler, and safe subscription close
- display: make DisplayModule.close() non-blocking and guard hologram mutations with generation tracking
- dialog: ensure Anvil prompt opens on entity region thread and unregister dialog listeners on close
- event: synchronize CompositeEventSubscription against add/close races and clean up owned async executor on bus close
- user: delegate saveAll to batch repository queries, log pre-login async load errors, and require unique_id in mapper
- cache: return failedFuture in exceptionallyCompose and log online player pre-load errors
- docs-examples: replace legacy formatting codes with MiniMessages